fixing alignment

--- a/stylesheets/fishSanctuary.less
+++ b/stylesheets/fishSanctuary.less
@@ -48,6 +48,9 @@
     }
   }
 
+
+
+
   .viz {
     .clearfix();
     margin-bottom:50px;
@@ -78,29 +81,3 @@
   }
 }
 
-.diameter {
-  img {
-    margin-left: 100px;
-    margin-top:5px;
-    width: 300px;
-    margin-bottom: 20px;
-  }
-}
-.y.axis text {
-  dominant-baseline: middle;
-  text-anchor: end;
-}
-
-.y.axis text.title {
-  text-anchor: middle;
-  fill: blue;
-}
-
-.x.axis text {
-  dominant-baseline: hanging;
-  text-anchor: middle;
-}
-
-.x.axis text.title {
-  fill: blue;
-}
