--- a/stylesheets/proposal.less
+++ b/stylesheets/proposal.less
@@ -25,23 +25,23 @@
 .y.axis text.title {
   text-anchor: middle;
   dominant-baseline: hanging;
-  fill: black;
+  fill: blue;
 }
+
 .x.axis text {
   dominant-baseline: hanging;
+  text-anchor: left;
+  fill: blue;
 }
 .x axis {
     dominant-baseline: hanging;
 }
 
-.x.axis-text {
+.x.axis-title {
   dominant-baseline: hanging;
-}
-
-.x.axis text.title {
-  fill: black;
   text-anchor: middle;
 }
+
 
 .ttip-tip{
 	text-align: center;
@@ -66,7 +66,6 @@
 .chart-tooltip li{
 	margin: 2px 2px 2px 22px;
 }
-
 
 .legend-text{
   text-anchor: left;
